--- a/css/styles.css
+++ b/css/styles.css
@@ -2,6 +2,15 @@
   text-align: center;
 }
 
-.important {
-  background-color: red;
+h1{
+  color: red;
+  font-style: italic;
+}
+
+h3{
+  font-style: italic;
+}
+
+p{
+  color: green;
 }
